mahout-88 patch submission
git-svn-id: https://svn.apache.org/repos/asf/lucene/mahout/trunk@707606 13f79535-47bb-0310-9956-ffa450edef68